--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://public.tableau.com/app/profile/hue.vuong1433/viz/USMortgage/Page1" class="image featured"><img src="images/SQLhouse.jpg" alt="" /></a>
+										<a href="https://public.tableau.com/app/profile/hue.vuong1433/viz/USMortgage/Page1" class="image featured"><img src="images/Mortgage.png" alt="" /></a>
 										<header>
 											<h3>US House Mortgage</h3>
 										</header>
@@ -219,3 +219,4 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
