--- a/index.html
+++ b/index.html
@@ -89,7 +89,19 @@
 										<p><strong>Tableau</strong>visualization of mortgage insights across the US based on income and working hours, helping users identify financially suitable areas. <a href="https://public.tableau.com/app/profile/hue.vuong1433/viz/USMortgage/Page1"><strong>Details</strong></a>
 										</p>
 									</section>
-
+							
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<!-- Feature -->
+									<section>
+										<a href="https://github.com/huevuonglabs/Pricing_Strategy/blob/main/Pricing%20Strategy/workspace/notebook.ipynb" class="image featured"><img src="images/Pricing.png" alt="" /></a>
+										<header>
+											<h3>Price Optimization Strategy</h3>
+										</header>
+										<p>This project aims to optimize product prices to maximize revenue using data-driven insights with <a href="https://github.com/huevuonglabs/Pricing_Strategy/blob/main/Pricing%20Strategy/workspace/notebook.ipynb"><strong>PostgreSQL</strong></a>
+							            </p>
+									</section>
+								
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
@@ -219,5 +231,6 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
