--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/huevuonglabs/Pricing_Strategy/blob/main/Pricing%20Strategy/workspace/notebook.ipynb" class="image featured"><img src="images/Pricing.png" alt="" /></a>
+										<a href="https://github.com/huevuonglabs/Pricing_Strategy/blob/main/Pricing%20Strategy/workspace/notebook.ipynb" class="image featured"><img src="images/Pricing.jpg" alt="" /></a>
 										<header>
 											<h3>Price Optimization Strategy</h3>
 										</header>
@@ -231,6 +231,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
