--- a/index.html
+++ b/index.html
@@ -101,7 +101,19 @@
 										<p>This project aims to optimize product prices to maximize revenue using data-driven insights with <a href="https://github.com/huevuonglabs/Pricing_Strategy/blob/main/Pricing%20Strategy/workspace/notebook.ipynb"><strong>PostgreSQL</strong></a>
 							            </p>
 									</section>
-								
+
+							<!-- Feature -->
+									<section>
+										<a href="https://app.slack.com/client/T09D53HUBQ8/C09C6NEBSP5?entry_point=default_oauth" class="image featured"><img src="images/Chatbot.png" alt="" /></a>
+										<header>
+											<h3>Sales Pulse Bot</h3>
+										</header>
+										<p>This project automates monthly sales performance reporting by fetching data with <strong>SQL</strong>, processing it in <strong>Python</strong>, and delivering formatted updates to the team’s Slack workspace via a <strong>Slack bot</strong> using the <strong>Slack API</strong>.
+										<a href="https://github.com/huevuonglabs/Automate-Biz-Reports-via-Slackbot-API/blob/main/notebook.ipynb"><strong>Link</strong></a>.</p>
+									</section>
+
+							</div>
+							<div class="col-4 col-6-medium col-12-small">	
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
@@ -231,6 +243,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
