--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 							<!-- Feature -->
 									<section>
-										<a href="https://app.slack.com/client/T09D53HUBQ8/C09C6NEBSP5?entry_point=default_oauth" class="image featured"><img src="images/Chatbot.png" alt="" /></a>
+										<a href="https://app.slack.com/client/T09D53HUBQ8/C09C6NEBSP5?entry_point=default_oauth" class="image featured"><img src="images/Chat Bot.png" alt="" /></a>
 										<header>
 											<h3>Sales Pulse Bot</h3>
 										</header>
@@ -243,6 +243,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
