--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 											<h3>Sales Pulse Bot</h3>
 										</header>
 										<p>This project automates monthly sales performance reporting by fetching data with <strong>SQL</strong>, processing it in <strong>Python</strong>, and delivering formatted updates to the team’s Slack workspace via a <strong>Slack bot</strong> using the <strong>Slack API</strong>.
-										<a href="https://github.com/huevuonglabs/Automate-Biz-Reports-via-Slackbot-API/blob/main/notebook.ipynb"><strong>Link</strong></a>.</p>
+										<a href="https://github.com/huevuonglabs/Automate-Biz-Reports-via-Slackbot-API/blob/main/notebook.ipynb"><strong>Link</strong></a>
+										</p>
 									</section>
 
 
@@ -245,6 +246,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
