--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/huevuonglabs/SQL-Housing/blob/main/SQLQuery-Housing.sql" class="image featured"><img src="images/SQLhouse.jpg" alt="" /></a>
+										<a href="https://github.com/huevuonglabs/SQL-Housing" class="image featured"><img src="images/SQLhouse.jpg" alt="" /></a>
 										<header>
 											<h3>Clean House - Clean Data</h3>
 										</header>
-										<p>Data cleansing toolkit using <strong>SQL Server</strong> applied to a house mortgage dataset for improved data quality. <a href="https://github.com/huevuonglabs/SQL-Housing/blob/main/SQLQuery-Housing.sql"><strong>Details</strong></a>
+										<p>Data cleansing toolkit using <strong>SQL Server</strong> applied to a house mortgage dataset for improved data quality. <a href="https://github.com/huevuonglabs/SQL-Housing"><strong>Details</strong></a>
 										</p>
 									</section>
 
@@ -120,11 +120,11 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/huevuonglabs/SQL-Healthcare/blob/main/SQLQuery-Covid.sql" class="image featured"><img src="images/healthcare.jpg" alt="" /></a>
+										<a href="https://github.com/huevuonglabs/SQL-Healthcare" class="image featured"><img src="images/healthcare.jpg" alt="" /></a>
 										<header>
 											<h3>Healthcare Analysis</h3>
 										</header>
-										<p><a href="https://github.com/huevuonglabs/SQL-Healthcare/blob/main/SQLQuery-Covid.sql"><strong>SQL-driven</strong></a> data cleansing and exploratory analysis of COVID-19 patient data and demographics.
+										<p><a href="https://github.com/huevuonglabs/SQL-Healthcare"><strong>SQL-driven</strong></a> data cleansing and exploratory analysis of COVID-19 patient data and demographics.
 							            </p>
 									</section>
 								
@@ -132,11 +132,11 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/huevuonglabs/SQL-Restaurant/blob/main/SQLQuery-Restaurant.sq" class="image featured"><img src="images/coffee shop.jpg" alt="" /></a>
+										<a href="https://github.com/huevuonglabs/SQL-Restaurant" class="image featured"><img src="images/coffee shop.jpg" alt="" /></a>
 										<header>
 											<h3>Restaurant Analysis</h3>
 										</header>
-										<p><a href="https://github.com/huevuonglabs/SQL-Restaurant/blob/main/SQLQuery-Restaurant.sql"><strong>SQL-based</strong></a> data manipulation for exploratory analysis of restaurant sales, peak hours, and menu performance to boost sales and improve service.
+										<p><a href="https://github.com/huevuonglabs/SQL-Restaurant"><strong>SQL-based</strong></a> data manipulation for exploratory analysis of restaurant sales, peak hours, and menu performance to boost sales and improve service.
 							            </p>
 									</section>
 
@@ -246,6 +246,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
