--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
 										<a href="https://public.tableau.com/app/profile/hue.vuong1433/viz/OnlineSalesDashboard_17307186939610/Dashboard"><strong>Link</strong></a>.</p>
 									</section>
 
+								<!-- Feature -->
+									<section>
+										<a href="https://github.com/huevuonglabs/Python-Customer_Churn_Analysis-" class="image featured"><img src="customer churn.jfif" alt="" /></a>
+										<header>
+											<h3>Crypto User Churn Analysis</h3>
+										</header>
+										<p>The project analyzed user engagement and trading behavior to identify retention drivers on a crypto exchange. <a href="https://github.com/huevuonglabs/Python-Customer_Churn_Analysis-"><strong>Python Link</strong></a>
+										</p>
+									</section>
+
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 
@@ -246,6 +259,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
