--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								
 								<!-- Feature -->
 									<section>
-										<a href="https://github.com/huevuonglabs/Python-Customer_Churn_Analysis-" class="image featured"><img src="customer churn.jfif" alt="" /></a>
+										<a href="https://github.com/huevuonglabs/Python-Customer_Churn_Analysis-" class="image featured"><img src="customer churn.jpg" alt="" /></a>
 										<header>
 											<h3>Crypto User Churn Analysis</h3>
 										</header>
@@ -258,6 +258,7 @@
 	</body>
 </html>
 <link rel="stylesheet" href="styles.css">
+
 
 
 
